# mdify

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  deb.yml  publish.yml
debian/: changelog  control  copyright
src/mdify/: __init__.py  api.py  cli.py  converter.py  ollama.py  server.py
tests/: test_cli.py  test_converter.py  test_ollama.py
